--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ body {
     color: green;
 }
 
+.blue {
+    color: blue;
+}
+
 .navbari {
     display: flex;
     flex-wrap: wrap;
@@ -84,4 +88,29 @@ body {
         height: 800px;
         width: 1600px;
     }
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.indian_heritage {
+    height: 600px;
+    width: 800px;
+}
+
+.description {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    max-width: 600px;
+}
+
+.summary {
+    color: orange;
+    font-family: "Bree Serif";
+    font-weight: 42px;
+    font-size: 19px;
 }
