--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,10 @@ video {
     }
     .greeting {
         height: 600px;
-        width: 800px;
+        width: 100%;
+    }
+    .inpendence_day_greeting {
+        width: 100%;
     }
     .greet {
         display: none;
@@ -216,7 +219,7 @@ video {
     .indian_heritage {
         max-width: 100%;
     }
-    .con {
+    .conc {
         width: 500px;
     }
     .description {
